--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -17,7 +17,7 @@
             "request": "launch",
             "program": "${file}",
             "console": "integratedTerminal",
-            "args": ["2020_JULY.json", "verbose"]
+            "args": ["~/Desktop/Semantic-location-history-2021", "verbose"]
         }
 
     ]
